1999-08-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-protocols*): Disable all generators but
	MT19937, PSWB, C2TAUS, and PMMLCG1gen (which Mousetrap happened to
	use).

1999-08-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-class-phase): Extend GUISwarmImpl
	from SwarmImpl.

1999-08-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-protocols*): Disable most of gui library,
	and some stuff in objectbase and simtoolsgui.
	(*removed-modules*, removed-protocol-p): Add support for disabling
	whole modules.
	(the-RETURNABLE-protocol-p): New function
	(returnable-p): New function, use function above.
	(real-class-p): Likewise.
	(java-print-class-phase, java-print-makefiles,
	java-print-makefiles, java-print-classes, java-run-all-javadoc):
	Use it.
	(java-print-convenience-constructors): Renamed from
	java-print-class-constructors.  Remove call to
	java-print-basic-class-constructor.
	(java-print-class-phase): Always print basic constructor, and
	print convenience and nextphase constructors when creatable (using
	and creating phase respective).
	(*objc-to-java-type-alist*): Add pattern for objects conforming to
	a protocol.
	(*removed-protocols*): Remove HDF5.  Add ArchiverList.
	(*removed-methods*): Add HDF5 methods with non-convertable types.
	(freakyp, freaky-message-): Remove.
	(java-objc-to-java-type): Add support for protocol type
	conversion.
	(java-print-class-constructor-method,
	java-print-nextphase-class-constructor): Don't do casting to
	Object for call to nextphase constructor.
	(java-print-native-method): Handle swarm.* types just like Object.

1999-08-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-protocols*): Add OutFile and AppendFile.

1999-08-15    <mgd@HELEN>

	* java-stub.el (java-print-native-class): Use import of
	<defobj/directory.h> instead of include of "directory.h".

1999-08-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
